8302491: NoClassDefFoundError omits the original cause of an error