src/hotspot/share/classfile/javaClasses.hpp
@@ -616,6 +616,7 @@ class java_lang_Throwable: AllStatic {
 
   // For recreating class initialization error exceptions.
   static Handle get_cause_with_stack_trace(Handle throwable, TRAPS);
+  static Handle get_cause_simple(Handle throwable, TRAPS);
 
   // Printing
   static void print(oop throwable, outputStream* st);
