src/hotspot/share/oops/cpCache.cpp
@@ -472,8 +472,17 @@ bool ConstantPoolCacheEntry::save_and_throw_indy_exc(
 
   Symbol* error = PENDING_EXCEPTION->klass()->name();
   Symbol* message = java_lang_Throwable::detail_message(PENDING_EXCEPTION);
+  // Try to discover the cause
+  oop cause = java_lang_Throwable::cause(PENDING_EXCEPTION);
+  Symbol* cause_sym = NULL;
+  Symbol* cause_msg = NULL;
 
-  SystemDictionary::add_resolution_error(cpool, index, error, message);
+  if (cause != NULL ) {
+    cause_sym = cause->klass()->name();
+    cause_msg = java_lang_Throwable::detail_message(cause);
+  }
+
+  SystemDictionary::add_resolution_error(cpool, index, error, message, cause_sym, cause_msg);
   set_indy_resolution_failed();
   return true;
 }
